cleanup multiple-codes analysis in Part II; build out regression dataframe for alternate specifications

--- a/the_new_trademark_complexity.tex
+++ b/the_new_trademark_complexity.tex
@@ -364,15 +364,15 @@ Thus, in recent decades, high-code applications have become more common. This re
 
 \begin{enumerate}
 
-\item[i.] \textit{Categories of codes}. For the period from 1986 to 2023, the mean number of categories per nonword application is 1.85 (sd = 1.03), and the median number of categories is 2. Naturally, the range of values here is narrower than it is for number of codes: the nonword application with the most categories has 20. The change over time in the mean and median number of categories per year mirrors the change in the mean and median number of codes per year: the mean increases slightly, from 1.84 in 1986 to 1.87 in 2023\footnote{The mean number of categories reaches a minimum of 1.63 in 2001 and a maximum of 2.01 in 2009.}, and the median stays constant at 2, except for between 1995 and 2001, when it drops to 1. Moreover, as with number of codes, applications with high numbers of different categories have grown over time, and applications with especially high numbers of different categories have grown as a percentage of all applications.\footnote{Nonword applications with more than 5 categories have risen as a percentage of all applications by about 0.1\% from 1986 to 2023.} All in all, this data confirms what we already know: we are seeing greater numbers of nonword applications that have many design search codes, and, concomitantly, a greater likelihood of having different categories of codes.\footnote{Whereas the mean number of codes for all marks is 3.18, the mean number of codes for marks with more than 3 different categories is 6.97, and the mean number of codes for marks with more than 5 different categories is 10.87.}
+\item[i.] \textit{Categories of codes}. From 1986 through 2023, the mean number of categories per nonword application was 1.85 (sd = 1.03), and the median number of categories was 2. Naturally, the range of values here is narrower than it is for number of codes: the nonword application with the most categories has 20. The change over time in the mean and median number of categories per year mirrors the change in the mean and median number of codes per year: the mean increases slightly from 1.84 in 1986 to 1.87 in 2023\footnote{The mean number of categories reaches a minimum of 1.63 in 2001 and a maximum of 2.01 in 2009.}, and the median stays constant at 2, except for between 1995 and 2001, when it drops to 1. Moreover, as with number of codes, applications with high numbers of different categories have grown over time, and applications with especially high numbers of different categories have grown as a percentage of all applications.\footnote{Nonword applications with more than 5 categories have risen as a percentage of all applications by about 0.01\% from 1986 to 2023.} All in all, these data confirm what we already know: we are seeing greater numbers of nonword applications that have many design search codes, and, concomitantly, a greater likelihood of having different categories of codes.\footnote{Whereas the mean number of categories for all applications is 1.85, the mean number of categories for applications with more than 5 codes is 3.20, and the mean number of categories for applications with more than 10 codes is 4.78, indicating that the number of categories per application does not necessarily remain constant as the number of codes increases.}
 
-\item[ii.] \textit{Non-basic codes}. Non-basic codes reveal a different side to this story. From 1986 to 2023, the number of applications with at least one non-basic code has markedly risen. But it has fallen as a percentage of the total number of applications per year. And although the number of applications with especially high numbers of non-basic codes has increased over that time period, that may say more about the general trend toward higher numbers of marks with many design codes than it says about a trend toward higher numbers of ``non-basic'' shapes. Indeed, the average number of basic codes per application over the same time period shows a slight upward trend. And if we look at applications with particularly high numbers of basic codes, we see an increase \emph{even if we take into account the broader increase in number of applications filed per year}. Put otherwise, it seems we are seeing a trend toward marks with high numbers of codes that correspond to basic, simple shapes.
+\item[ii.] \textit{Non-basic codes}. Non-basic codes reveal a different side to this story. From 1986 through 2023, the mean number of non-basic codes per nonword application is 1.76 (sd = 1.76), and the median number of non-basic codes is 1, with these statistics staying relatively constant over time.\footnote{The mean number of non-basic codes per mark was 1.80 in 1986 and 1.82 in 2023, with the median number of non-basic codes remaining at 1 for all years from 1986 through 2023, except for 2007, when it rose to 2.} Although the number and proportion of applications with the highest numbers of non-basic codes have increased over that time period,\footnote{For instance, during that period, there was about an 850\% increase in marks with more than 5 non-basic codes, representing a 0.02\% increase in such marks as a percentage of all applications.} that probably says more about the general trend toward higher numbers of marks with many design codes than it says about a trend toward higher numbers of non-basic shapes. Indeed, the mean number of \textit{basic codes} per application, the proportion of applications with more than 5 basic codes, and the ratio of basic-to-non-basic codes assigned to marks per year have all slightly increased over the same time period.\footnote{From 1986 through 2023, the mean number of basic codes per application has risen from 1.39 to 1.59, applications with more than 5 basic codes have risen by 800\% in absolute terms and by 0.01\% as a percentage of all applications, and the ratio of basic-to-nonbasic codes assigned to marks per year has risen from 0.79 to 0.87. If we limit the population to high-code marks only, then the ratio of basic-to-non-basic codes has increased by a roughly similar amount from 0.83 in 1986 to 0.94 in 2023.} Thus, if anything, the increase in high-code applications has been accompanied by a modest increase in the USPTO's assignment of \textit{basic} codes to applications.
 
-\item[iii.] \textit{Multiple-element codes}. [Examining the prevalence of multiple-element codes in post-2007 applications yields inconclusive results. From early 2007 to 2023, the mean number of multiple-element codes per mark does not show a clear trend. Nor does the percentage of applications per year with one or more multiple-element codes. If anything, these metrics show an increase during that time period, but the trend is a very slight one.\footnote{The year 2010 seems to have seen an especially high proportion of these codes being applied to applications. Perhaps this is due to chance. Alternatively, one might conjecture that it is because, in 2010, the USPTO's 2007 code changes were still relatively recent, and examiners may have initially overapplied the new design search codes.} This is not particularly surprising. Close to half of the multiple-element codes are also basic codes. So, holding everything else constant, if we are seeing an increasing number of marks with high numbers of basic codes, we might expect to see a general increase in the number of multiple-element codes in the population of applications.]
+\item[iii.] \textit{Multiple-element codes}. Examining the prevalence of multiple-element codes in applications filed after the USPTO's 2007 code changes points in a similar direction. From early 2007 through 2023, the mean number of multiple-element codes per application was 0.31 (sd = 0.64) and the median number was 0. During that period, the mean number of multiple-element codes per application per year rose from 0.27 in 2007 to 0.32 in 2023, while the per-year median remained at 0. The number of applications with at least 1 multiple-element code increased both in absolute terms and as a proportion of all applications, although applications with more than 5 such codes slightly decreased as a proportion of all applications.\footnote{The number of applications with at least 1 multiple-element code roughly doubled between 2007 and 2023 and increased as a percentage of all applications by about 0.07\%. By contrast, the number of applications with 5 or more multiple-element codes was 5 in 2007 and 6 in 2023, representing a decrease of 0.0005\% as a proportion of all applications.} This is not particularly surprising. Close to half of the multiple-element codes are also basic codes. So, a modest increase in the USPTO's assignment of basic codes to applications could also modestly increase the assignment of multiple-element codes to applications, even if applications with especially high numbers of multiple-element codes are not necessarily becoming more common.
 
 \end{enumerate}
 
-The upshot here is somewhat counterintuitive. We are seeing more and more applications for marks with a high number of codes, but the codes themselves may not correspond to visual elements that are especially complex. Instead, the codes for high-code applications may often—though not always—correspond to basic, simple, or abstract visual elements (e.g., lines or circles), as opposed to more representational, detailed elements (e.g., giraffes or space rockets). That's not particularly surprising. Basic codes are highly utilized. About [44\%] of the codes assigned to nonword applications from 1986 through 2023 are basic, even though basic codes constitute only [14\%] of all unique codes that could be assigned to marks. But high-code applications are also, on average, likelier to have more basic codes. The average percentage of basic codes per high-code application is [47\%], even though the average percentage of basic codes per mark for all applications is [40\%]. At the same time, basic codes are not the \emph{sole} driver of the increase in high-code marks. As shown in the robustness checks at the end of this Section, that increase remains observable even if we control for the number of basic codes per mark.
+The upshot here is somewhat counterintuitive. We are seeing more and more applications for marks with a high number of codes, but the codes themselves may not correspond to visual elements that are especially complex. Instead, the codes for high-code applications may often—though not always—correspond to basic, simple, or abstract visual elements (e.g., lines or circles), as opposed to more representational, detailed elements (e.g., giraffes or space rockets). This makes sense. Basic codes are highly utilized. About 44\% of the codes assigned to nonword applications from 1986 through 2023 are basic, even though basic codes constitute only 14\% of all unique codes that could be assigned to marks. Moreover, high-code applications are also likelier to have more basic codes. The average percentage of basic codes per high-code application is 47\%, even though the average percentage of basic codes per application is 40\% for all nonword applications. At the same time, basic codes are not the \emph{sole} driver of the increase in high-code marks. As shown in the robustness checks [at the end of this Section], that increase remains observable even if we control for the number of basic codes per mark.
 
 The way this cashes out, in practical terms, is by giving us two distinct pictures of complexity. On the one hand, applications with very high numbers of codes are often detailed two-dimensional designs. Some may be more representational and others more abstract, but they are basically still traditional logos: two-dimensional designs that are placed on products or displays associated with products. Take, for example, the following elaborate image, registered by Radyne Corporation, an induction heating manufacturer, and used on its promotional materials:
 
@@ -417,22 +417,13 @@ The way this cashes out, in practical terms, is by giving us two distinct pictur
 \end{figure}
 \par
 
-\noindent Likewise, consider Dior's recent application for the shape of a handbag it sells: \
-
-\begin{figure}[H]
-\centering
-\includegraphics[scale = 0.45]{SN_98174172_drawing} \
-\caption*{Drawing submitted for Registration No. 98,174,172}
-\end{figure}
-\par
-
 \noindent And, in a similar vein, Levi's has registered the shape of the entire back pocket of the jeans it sells:
 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[h]{0.25\linewidth}
 \includegraphics[width = \linewidth]{RN_2791156_drawing} \
-\caption{Drawing of mark}
+\caption{Drawing of mark submitted to the USPTO}
 \end{subfigure}
 \hspace{30pt}
 \begin{subfigure}[h]{0.25\linewidth}
@@ -445,25 +436,25 @@ The way this cashes out, in practical terms, is by giving us two distinct pictur
 
 In other words, nonword applications with very high numbers of codes generally fall into one of two buckets: complex logos or highly specific trade dress. For applications in the former bucket, the large number of distinct, separately identifiable visual elements they contain is what accounts for the numerosity of their codes. For applications in the latter bucket, there's a bit more nuance. The numerosity of these applications' codes flows more from their attempt to capture a large amount of specific details, many of which, if considered individually, may not seem particularly distinct. Thus, the back pocket of a pair of Levi's jeans may not seem particularly ``complex'' to a casual observer, but 15 codes (e.g., ``polygons touching or intersecting'' (26.15.16),  ``polygons inside another polygon'' (26.15.20)) are needed to account for the pocket's stitching, shape, and overall composition.
 
-The subset of codes I've termed ``basic'' is again helpful in understanding these two buckets. Radyne's mark has zero basic codes, and only two of the 18 codes for A.H. Riise's mark are basic. In contrast, 15 of the 25 codes for the Amazon mark above, 23 of the 24 codes for the Dior mark above, and 13 of the 15 codes for the Levi's mark above are basic. This makes sense. Marks like Radyne's and A.H. Riise's involve many representational shapes (e.g., people, animals, trees). The Amazon, Dior, and Levi's applications involve representational shapes to some extent, but they largely focus on the structural details of objects (e.g., the contours of a building or a handbag). Those structural details are likelier to correspond to relatively simple, geometric shapes than they are to correspond to figurative, representational shapes. So naturally those applications will correspond to a greater number of basic codes. 
+The subset of codes I've termed ``basic'' is again helpful in understanding these two buckets. Radyne's mark has zero basic codes, and only two of the 18 codes for A.H. Riise's mark are basic. In contrast, 15 of the 25 codes for the Amazon mark above, and 13 of the 15 codes for the Levi's mark above, are basic. This difference tracks the difference between logos and product features. Marks like Radyne's and A.H. Riise's involve many representational shapes (e.g., people, animals, trees). The Amazon and Levi's applications involve representational shapes to some extent, but they largely focus on the structural details of objects (e.g., the contours of a building). Those structural details are likelier to correspond to relatively simple, geometric shapes than they are to correspond to figurative, representational shapes. So naturally those applications will correspond to a greater number of basic codes. 
 
-These are generalizations, of course. Some applications buck this trend: they are for complex logos that are composed of geometric shapes, or they are for a product shape that includes human or animal figures. But, overall, we are seeing more businesses apply for, on the one hand, designs that are effectively logos with a high number of visual elements and, on the other, designs that are highly specific and detailed agglomerations of abstract shapes associated with product features, many of which reach beyond the realm of traditional logos. The balance of this Part seeks to answer why.
+These are generalizations, of course. Many applications buck this trend: they are for complex logos that are composed of geometric shapes, or they are for a product shape that includes human or animal figures. But, overall, we are seeing more businesses apply for, on the one hand, designs that are effectively logos with a high number of visual elements and, on the other, designs that are highly specific and detailed agglomerations of shapes associated with product features, many of which reach beyond the realm of traditional logos. The balance of this Part seeks to answer why.
 
 \subsubsection{Inferential Statistics}\label{subsubsec:2B2}
 
-The increase in visually complex applications may not be surprising. Previous empirical studies on trademark prosecution have shown that applications for ``nontraditional'' marks—for instance, marks consisting only of nonvisual elements like sound or scent—have increased in recent decades, both at the USPTO and at some of its counterparts in other countries.\footnote{\textit{See} Carolina Castaldi, \textit{The Economics and Management of Non-Traditional Trademarks}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 257, 265 fig.13.1; \textit{Sound Marks}, \textit{supra} note~\ref{supra23}, at 2397 fig.I; \textit{see also} Mitchell Adams \& Amanda Scardamaglia, \textit{Non-Traditional Trademarks: An Empirical Study}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 37, 45 fig.2.1.} As for visual marks in particular, Deborah R. Gerhardt and Jon McClanahan Lee have shown that nonword applications—and, specifically, applications for marks consisting of color alone—have increased at the USPTO.\footnote{\textit{Owning Colors}, \textit{supra} note~\ref{supra23}, at 2539–40 figs.XI, XII, XIII.} As those authors suggest, this increase may in part be due to the U.S. Supreme Court's 1995 decision in \textit{Qualitex Co. v. Jacobson Products Co.}, which held that a single color could be a trademark, as long as it had acquired distinctiveness.\footnote{\textit{See id.}.} Similarly, Irene Calboli has observed in qualitative terms that nontraditional marks consisting of highly specific trade dress—e.g., the shape of a handbag—are increasingly common.\footnote{Irene Calboli \& Martin Senftleben, Introduction, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 1; Irene Calboli, \textit{Chocolate, Fashion, Toys and Cabs: The Misunderstood Distinctiveness of Non-Traditional Trademarks}, 49 \textsc{Int'l Rev of Intell. Prop. \& Competition L.} 1 (2018).}
+At first glance, one might interpret the rise of high-code applications as merely one facet of a broader uptick in filings for nontraditional marks—whether those marks consist of visual elements, sound, scent, or something else. Indeed, previous empirical studies on trademark prosecution have shown that applications for ``nontraditional'' (i.e., nonverbal) marks have increased in recent decades, both at the USPTO and at some of its counterparts in other countries.\footnote{\textit{See} Carolina Castaldi, \textit{The Economics and Management of Non-Traditional Trademarks}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 257, 265 fig.13.1; \textit{Sound Marks}, \textit{supra} note~\ref{supra23}, at 2397 fig.I; \textit{see also} Mitchell Adams \& Amanda Scardamaglia, \textit{Non-Traditional Trademarks: An Empirical Study}, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 37, 45 fig.2.1.} In particular, applications for marks composed of visual elements—and, specifically, applications for marks consisting of color alone—have increased at the USPTO when measured in absolute numbers of applications per year, consistent with the data shown in Figure~\ref{fig:2}.\footnote{\textit{Owning Colors}, \textit{supra} note~\ref{supra23}, at 2539–40 figs.XI, XII, XIII. With respect to marks consisting of color alone, this increase may in part be due to the U.S. Supreme Court's 1995 decision in \textit{Qualitex Co. v. Jacobson Products Co.}, which held that a single color could be a trademark, as long as it had acquired distinctiveness. \textit{See id.}} Similarly, many have observed in qualitative terms that nontraditional marks consisting of highly specific trade dress—e.g., the shape of a handbag—are increasingly common, particularly among luxury brands.\footnote{Irene Calboli \& Martin Senftleben, Introduction, \textit{in} \textsc{The Protection of Non-Traditional Trademarks} 1; Irene Calboli, \textit{Chocolate, Fashion, Toys and Cabs: The Misunderstood Distinctiveness of Non-Traditional Trademarks}, 49 \textsc{Int'l Rev of Intell. Prop. \& Competition L.} 1 (2018).}  But, at least at the USPTO, the increase in absolute numbers of nontraditional marks is more a symptom of ballooning numbers of trademark filings in general and less an indicator of a trend unique to nontraditional marks. In fact, the share of nontraditional applications has \emph{decreased} if we account for the broader increase in applications for all marks, including word marks. In contrast, as shown in Figure~\ref{fig:6}, the share of high-code applications has increased, even accounting for the broader increase in all applications. Thus, visually complex nonword marks are following a different trajectory from nontraditional marks in general.
 
-Against that background, one might interpret higher numbers of high-code applications as merely one facet of a broader uptick in filings for nontraditional marks, whether they consist of visual elements, sound, scent, or something else. But that's not exactly right. As previously noted, although the number of nonword applications filed per year has increased in recent decades, the share of those applications has \emph{decreased} if we account for the broader increase in applications for all marks, including word marks. In contrast, the share of high-code applications has increased, even accounting for the broader increase in all applications. That suggests that visually complex nonword marks are following a different trajectory from nonword marks in general. And if that's the case, then what accounts for that trajectory?
-
-One possible answer is that businesses are increasingly filing for complex nonword marks because greater complexity increases their chances of securing a registration. At face value, that seems eminently plausible. Recall Section \ref{sec:1}.\ref{subsec:1B}'s discussion of the \textit{Seabrook} test for the inherent distinctiveness of trade dress. As the USPTO and courts have indicated, that test in substance deems a mark inherently distinctive if it is unique or uncommon in its commercial context.\footnote{See \textit{supra} note [X].} For example, proposing a simple, unadorned green circle on a coffee cup (\includegraphics[scale = 0.2]{RN_5754170_drawing})\footnote{Registration No. 5754170.} as a trademark for coffee drinks is not likely to pass the \textit{Seabrook} test, because circles of any color are common shapes in all fields.\footnote{\textit{In re} Starbucks Corp., Nos. 85792872 \& 86689423, 2019 TTAB LEXIS 8 (T.T.A.B. July 17, 2018) [non-precedential].} In contrast, using the Starbucks logo (\includegraphics[scale = 0.125]{RN_4538053_drawing}) for coffee drinks easily passes the \textit{Seabrook} test, because a circle containing a siren wearing a crown adorned with a star is not necessarily common in that field. Intuitively, the more visual elements one adds to a mark, the less likely it is that all of the elements in the mark, taken as a whole, will be commonplace in the mark's commercial context. So, theoretically, businesses could have an incentive to lard their applications with additional visual elements to better their chance of registering their mark.
+One possible reason for this phenomenon is that it represents a legal strategy. Is is plausible that businesses may be increasingly filing for complex nonword marks because greater complexity increases their chances of securing a registration. Recall Section \ref{sec:1}.\ref{subsec:1B}'s discussion of the \textit{Seabrook} test for the inherent distinctiveness of trade dress. As the USPTO and courts have indicated, that test in substance deems a mark inherently distinctive if it is unique or uncommon in its commercial context.\footnote{See \textit{supra} note [X].} For example, proposing a simple, unadorned green circle on a coffee cup (\includegraphics[scale = 0.2]{RN_5754170_drawing})\footnote{Registration No. 5754170.} as a trademark for coffee drinks is not likely to pass the \textit{Seabrook} test, because circles of any color are common shapes in all fields.\footnote{\textit{In re} Starbucks Corp., Nos. 85792872 \& 86689423, 2019 TTAB LEXIS 8 (T.T.A.B. July 17, 2018) [non-precedential].} In contrast, using the Starbucks logo (\includegraphics[scale = 0.125]{RN_4538053_drawing}) for coffee drinks easily passes the \textit{Seabrook} test, because a circle containing a siren wearing a crown adorned with a star is not necessarily common in that field. Intuitively, the more visual elements one adds to a mark, the less likely it is that all of the elements in the mark, taken as a whole, will be commonplace in the mark's commercial context. So, theoretically, businesses could have an incentive to pack their applications with additional visual elements to better their chance of registering their mark.
 
 Conventional wisdom may also support that account. When a client seeks to register a word mark that risks a rejection by the USPTO for being nondistinctive, trademark lawyers routinely suggest that the client combine the work mark with a nonverbal, visual element in order to reduce that risk.\footnote{[Cites.] \url{https://www.cll.com/OnMyMindBlog/adding-a-word-or-distinctive-design-to-a-mark-sometimes-can-avoid-a-likelihood-of-confusion}; \url{https://smithhopen.com/2020/12/01/the-right-to-your-name/}; cf. Fromer \& McKenna. Lawyers who make this suggestion will also generally note that the client should be open to including a disclaimer of the mark's verbal element, if the USPTO expresses the view that the matter should be disclaimed.} The logic here is that adding a visual element to a word mark subjects the mark to the \textit{Seabrook} analysis, because the mark is now not only a string of characters but a design as well. And as long as that design is not exceedingly common, \textit{Seabrook} is a relatively permissive test. This logic is only one step away from a strategy of adding more visual elements to a nonword mark (as opposed to a word mark) in order to increase its chances of receiving USPTO approval.
 
-Indeed, the data suggest such a strategy could be effective. Fitting a regression model on the USPTO data discussed above suggests that having more design search codes improves an applicant's odds of receiving USPTO approval of their mark. To run that regression, I first exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Because the dependent variable—USPTO approval—is binary, I use logistic regression with number of design search codes as the independent variable. Consistent with similar models in the literature, I include as dummy explanatory variables (1) the class of goods/services for which the mark was filed, (2) the year in which the application was filed, and (3) whether the application was filed pro se as opposed to by an attorney. Table~\ref{table:1} shows the intercept and coefficient of this regression model, omitting the dummy explanatory variables for (1) through (3) above.\footnote{W. Michael Schuster, Miriam Marcowitz-Bitton \& Deborah R. Gerhardt, \textit{An Empirical Study of Gender and Race in Trademark Prosecution}, 94 \textsc{S. Cal. L. Rev.} 1407, 1451 (2021).}
+Indeed, the data suggest such a strategy could be effective. To test whether having more design search codes improves an applicant's odds of receiving USPTO approval, I estimate a logistic regression of the form \
+\begin{equation}
+Approved_i=\beta_0+\beta_1N_i+\beta_2X_i
+\end{equation}
+where $Approved_i$ is an indicator variable equal to 1 if application $i$ was approved and 0 otherwise, $N_i$ is the number of design search codes assigned to application $i$, and $X_i$ is a vector of controls for (1) whether application $i$ was filed by an attorney or pro se, (2) the year in which application $i$ was filed, and (3) the international classes of goods/services in which application $i$ was filed. I exclude any applications filed in 2022 or later, because, as noted, there is a nontrivial number of applications filed in the last couple of years on which the USPTO has not yet reached a final decision. Table~\ref{table:1} shows the intercept and coefficient of this regression model under my preferred specification:
 
 \input{table_1.tex} \par
-
-[NTD: To run this regression with the somewhat odd maximum-class-only dummy variables used in the Schuster et al. piece—effect of n is probably very similar.] \\
 
 \noindent In the table above, the ``estimate'' value of n indicates that, holding everything else constant, each additional design search code in a nonword trademark application increases an applicant's odds of USPTO approval by about $e^{0.0905}-1 \approx 10\%$.\footnote{[NTD: Because no nonword mark can have zero design search codes, this model effectively gives all marks a 10\% chance of securing approval by virtue of merely existing. To consider this point in the next draft.]} This increase is highly statistically significant (with a p-value of 0.000), although the absolute percentage change ($\sim10\%$) is somewhat modest. However, that percentage change becomes quite substantial where an application has more than five codes ($\ge 72\%$) and even more so where an application has more than ten codes ($\ge 170\%$). In other words, having a high number of codes can significantly better an applicant's odds of receiving USPTO approval. Although an approved mark doesn't automatically register (there are additional procedural requirements before it can do so), receiving approval means that the USPTO has determined that the mark itself meets all substantive statutory requirements for registration. In any case, number of design search codes is also a statistically significant predictor of whether a mark ultimately registers—each additional design search code increases odds of registration by about 4\%. Given these results, it at least plausible that the recent increase in marks with high numbers of design codes represents a strategy by applicants to increase their odds of approval and registration. 
 
